--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,11 @@
 body {
-   background-color: #E9967A;
-   background: linear-gradient(-45deg, #f06, #9f6, #06f, #f06);
-   background-size: 400% 400%;
-   animation: glitter 2s infinite;
+  padding: 0;
+  margin: 0;
+  text-align: center;
   
-    
-  }
-  @keyframes glitter {
-    0% {
-        background-position: 0% 0%;
-    }
-    100% {
-        background-position: 100% 100%;
-    }
 }
 
 
- 
 
 .logo{
     width:500px;
@@ -61,7 +50,7 @@ body {
 }
 
 
-.btn{
+#btn{
  
     background:#F8F8FF;
     color:  palevioletred;
@@ -74,9 +63,10 @@ body {
     padding-right: 20px;
     border: 2px solid #B131DE;
     border-radius: 20px;
+    
 }
 
-.btn_inst{
+#btn_inst{
    
     background:#F8F8FF;
     color: palevioletred;
@@ -92,7 +82,7 @@ body {
 
 }
 
-.players{
+#players{
 
     background:#F8F8FF;
     color: palevioletred;
@@ -107,8 +97,64 @@ body {
     border-radius: 20px;
 }
 
-.container{
+
+
+#game-container {
     display: flex;
+    width: 100vw;
+    padding: 20px 0px;
     justify-content:center;
-    gap: 40px;
-}
+    display: none;
+  }
+
+
+  #game-screen {
+   
+    display: block;
+    background-size:cover; 
+    align-content: center;
+    padding-top: 400px;
+    padding-bottom: 400px;
+    padding-right: auto;
+    padding-left: auto;
+    overflow: hidden;
+    position: relative;
+    background-image: url(../images/road.jpg);
+   /* animation: slide 5s linear infinite;
+    background-position: 100% 0;*/
+  }
+  @keyframes slide {
+    0% {
+      background-position: 0px 0px;
+    }
+    
+    100% {
+      background-position: 0px 100%;
+    }
+  }
+
+
+  #game-end {
+    display: none;
+  }
+
+  #game-intro{
+    
+    margin: 0; 
+    padding: 0;
+    background: linear-gradient(-45deg, #f06, #9f6, #06f, #f06);
+    background-size: 400% 400%;
+    animation: glitter 2s infinite;
+
+  }
+
+  @keyframes glitter {
+    0% {
+        background-position: 0% 0%;
+    }
+    100% {
+        background-position: 100% 100%;
+    }
+  }  
+  
+  
