--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@ body {
   padding: 0;
   margin: 0;
   text-align: center;
+  box-sizing: border-box;
   
 }
 
@@ -104,35 +105,36 @@ body {
     width: 100vw;
     padding: 20px 0px;
     justify-content:center;
-    display: none;
+    
   }
 
 
   #game-screen {
-   
-    display: block;
-    background-size:cover; 
-    align-content: center;
-    padding-top: 400px;
-    padding-bottom: 400px;
-    padding-right: auto;
-    padding-left: auto;
-    overflow: hidden;
-    position: relative;
-    background-image: url(../images/road.jpg);
-   /* animation: slide 5s linear infinite;
-    background-position: 100% 0;*/
-  }
-  @keyframes slide {
-    0% {
-      background-position: 0px 0px;
-    }
-    
-    100% {
-      background-position: 0px 100%;
-    }
-  }
+    display: none;
+  align-content: center;
+  padding: 20px 0px;
+  padding-top: 300px;
+  padding-bottom: 300px;
+  padding-right: 50px;
+  padding-left: 80%;
+  overflow: hidden;
+  position: relative;
+  background-image: url(../images/road1.jpg);
+  background-size: cover;
+  /*animation: slide 5s linear infinite;*/
+}
 
+@keyframes slide {
+  0% {
+    background-position: 0 -1000px;
+  }
+  95% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 0 50px;
+  }
+}
 
   #game-end {
     display: none;
@@ -144,7 +146,9 @@ body {
     padding: 0;
     background: linear-gradient(-45deg, #f06, #9f6, #06f, #f06);
     background-size: 400% 400%;
-    animation: glitter 2s infinite;
+    /*animation: glitter 2s infinite;*/
+    height: 100vh;
+    width: 100vw;
 
   }
 
