working on final work

--- a/styles/style.css
+++ b/styles/style.css
@@ -103,20 +103,7 @@ body {
 
 }
 
-#players{
 
-    background:#F8F8FF;
-    color: palevioletred;
-    width: 150px;
-    margin-top: 10px;
-    line-height: 24px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border: 2px solid #B131DE;
-    border-radius: 20px;
-}
 
 
 
@@ -205,7 +192,7 @@ body {
   }
 
   #info{
-    display: block;
+    display: none;
     font-size: 30px;
     font-weight: bold;
     color:darkgreen ;
