--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-body {
+ body {
  
   padding: 0;
   margin: 0;
@@ -9,8 +9,7 @@ body {
   background: linear-gradient(-45deg, #f06, #9f6, #06f, #f06);
   background-size: 200% 200%;
   animation: glitter 2s infinite;
-  height: 100vh;
-  width: 100vw;
+
    }
 
 @keyframes glitter {
@@ -31,7 +30,7 @@ body {
 
 
 .logo{
-    width:300px;
+    width:400px;
     display: block;
     margin-top: 10px;
     margin-bottom:90px;
@@ -216,3 +215,7 @@ body {
     padding: 20px;
     
   }
+
+  .hidden {
+    display: none;
+}
