--- a/styles/style.css
+++ b/styles/style.css
@@ -6,28 +6,10 @@
   box-sizing: border-box;
   overflow-x: hidden;
   overflow-y: hidden;
-  background: linear-gradient(-45deg, #f06, #9f6, #06f, #f06);
-  background-size: 200% 200%;
-  animation: glitter 2s infinite;
-
-   }
-
-@keyframes glitter {
-  0% {
-      background-position: 0% 0%;
-  }
-  100% {
-      background-position: 100% 100%;
-  }
-}  
-
+  top: 0;
+  left: 0;
  
-
- 
-  
-
-
-
+       }
 
 .logo{
     width:400px;
@@ -167,6 +149,16 @@
 
   #game-end {
     display: none;
+    background-image: url('https://images2.alphacoders.com/495/495627.jpg');
+    background-size: cover;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     
     
   }
@@ -192,7 +184,7 @@
   
   #restart-button{
    
-    background:yellowgreen;
+    background:honeydew;
     color: brown;
     width: 150px;
     margin-top: 10px;
@@ -216,6 +208,50 @@
     
   }
 
-  .hidden {
-    display: none;
+  .shaking {
+    animation: shake 0.5s; 
+    animation-iteration-count: 1; }
+
+
+
+.obstacle.shaking {
+    animation: shake 0.5s;
+
+}
+
+
+
+@keyframes Shake {
+  0% {
+      transform: rotate(5deg);
+  }
+
+  25% {
+      transform: rotate(-6deg);
+  }
+
+  50% {
+      transform: rotate(5deg);
+  }
+
+  75% {
+      transform: rotate(-6deg);
+  }
+
+  100% {
+      transform: rotate(5deg);
+  }
+}
+
+#end{
+  padding-top: 300px;
+  padding-left: auto;
+  padding-right: auto;
+  text-align: center;
+}
+
+
+
+.hide-score {
+  display: none;
 }
